tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-90c1b93d.ts
export async function fn_90c1b93d(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
